# learn-with-me

./: LICENSE  README.md  requirements.txt
backend/: Dockerfile
backend/app/: main.py
backend/app/api/api_v1/routers/: words.py
backend/app/core/: config.py
backend/app/data_capturer/dataset_creation/: caption_converter.py
backend/app/data_capturer/video_list_retriever/: youtube_retriever.py
backend/app/db/: crud.py  models.py
backend/app/model/: tf_idf.py
learn-with-me/: README.md  pyproject.toml
learn-with-me/backend/: caption_converter.py  caption_downloader.py  conftest.py  requirements.txt  tf_idf.py  video_list_retriever.py
learn-with-me/backend/app/: initial_data.py  main.py
learn-with-me/backend/app/api/api_v1/routers/: words.py
learn-with-me/backend/app/audio_extractor/: __init__.py
learn-with-me/backend/app/caption_downloader/: caption_downloader.py
learn-with-me/backend/app/dataset_creation/: caption_converter.py
learn-with-me/backend/app/db/: migrate_caption_dataset.py
learn-with-me/backend/app/model/: tf_idf.py
learn-with-me/backend/app/video_list_retriever/: ted_retriever.py
learn-with-me/nginx/: nginx.conf
learn_with_me/: main.py
learn_with_me/backend/caption_downloader/: caption_downloader.py
learn_with_me/backend/dataset_creation/: caption_converter.py
learn_with_me/backend/model/: tf_idf.py
learn_with_me/backend/video_list_retriever/: ted_retriever.py
learn_with_me/tests/backend/: test_tf_idf.py
learn_with_me/tests/backend/video_list_retriever/: test_ted_scrapper.py
nginx/: nginx.conf
